--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,9 +12,12 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
+        <a href="/">Home</a>
         <a href="/about/">About</a>
         <a href="/blog/">Blog</a>
-		<h1>My Astro Site</h1>
+		<h1>About Me</h1>
+        <h2>... and my new Astro site!</h2>
+        <p>I am currently working through Astro's introductory tutorial. This is the second page I have made</p>
+        <p>This site will continue to update as I carry on learning to use Astro, so keep checking back!</p>
 	</body>
 </html>
