--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -12,9 +12,10 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
+        <a href="/">Home</a>
         <a href="/about/">About</a>
         <a href="/blog/">Blog</a>
-		<h1>My Astro Site</h1>
+		<h1>My Blog</h1>
+        <p>This is where any sort of blog page will go</p>
 	</body>
 </html>
